s2i-flask/cfg/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask-s2i
  name: flask-s2i
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: flask-s2i
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: flask-s2i
    spec:
      containers:
      - image: flask-s2i:latest
        imagePullPolicy: Always
        name: flask-s2i
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "1"
            memory: "128Mi"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
