s2i-flask/cfg/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask-s2i
  name: flask-s2i
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: flask-s2i
  sessionAffinity: None
  type: ClusterIP
